add sort, delete and auth requests

--- a/src/components/ModalComponent/modal-component.scss
+++ b/src/components/ModalComponent/modal-component.scss
@@ -14,6 +14,9 @@
     width: 335px;
     height: 215px;
     padding: 44px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
 }
 
 .modal-content__btns {
